# serv

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yml  BUILD.bazel  LICENSE  MODULE.bazel  NEWS  README.md  barrel.mem  bitbang.hex  firmware.hex  fusesoc.conf  genindex.html  hellomin.hex  helloservice4000.hex  index.html  objects.inv  search.html  searchindex.js  ser_add_tb.v  serv.core  serv_top_tb.v  servant.core  servile.core  serving.core  testhalt.v  testprint.v  try  vlog_tb_utils-1.1-r2.core  west.yml
.github/workflows/: ci.yml  formal.yml  lint.yml  openlane.yml  pages.yml
bench/: decoder_sim.v  decoder_tb.cpp  serv_alu_tb.v  serv_arbiter.v  serv_ctrl_tb.v  serv_decode_tb.v  serv_mux.v  serv_soc_tb.cpp  serv_top_tb.v  serv_wrapper.v  servant_external_sim.v  servant_external_tb.cpp  servant_sim.v  servant_tb.cpp  servant_tb.v  servant_tb_vidbo.cpp  servant_timer_sim.v  servant_timer_tb.cpp  uart_decoder.v
cores/techlibs/: ice40-0.7.core
cores/wb_ram_1.1/: README.md  wb_ram.core
cores/wb_ram_1.1/bench/: wb_ram_tb.v
cores/wb_ram_1.1/rtl/verilog/: wb_ram.v  wb_ram_generic.v
data/: ac701.xdc  alchitry_au.xdc  alhambra.pcf  arty_a7_35t.xdc  arty_s7_50t.xdc  ax309.ucf  catzip.pcf  cmod_a7_35t.xdc  cyc1000.sdc  cyc1000.tcl  de0_nano.tcl  de10_nano.tcl  de1_soc_revF.sdc  de1_soc_revF.tcl  deca.tcl  ebaz4205.xdc  ecp5_evn.lpf  eos_s3.pcf  eos_s3.sdc  gmm7550.ccf  go_board.pcf  icebreaker.pcf  icefun.pcf  icestick.pcf  icesugar.pcf  icesugar_nano.pcf  icev_wireless.pcf  lx9_microboard.ucf  machdyne_kolibri.pcf  max10_10m08evk.tcl  nexys_2.tcl  nexys_2.ucf  nexys_4.xdc  nexys_a7.xdc  orangecrab_r02.lpf  params.tcl  pipistrello.ucf  polarfire_splashkit.pdc  sockit.tcl  tang_nano_20k.cst  (+8 more)
data/chameleon96/: CV_96.v  HPS.sv  chain1.cdf  chameleon96.sdc  pinmap.tcl
doc/: .nojekyll  conf.py  datasheet.rst  index.rst  interface.rst  internals.rst  modules.rst  overview.rst  requirements.txt  reservoir.rst  servant.rst  servile.rst  serving.rst  subservient.rst
docs/: W_PARAMETER.md
firmware/: firmware.elf  firmware.map
mdu/: mdu.core
mdu/rtl/: mdu_top.v
mydoc/: Makefile  catzip-icestorm.odt  helloworld.pcf  helloworld.v  notes.txt
openroad/: BUILD.bazel  README.md  constraints_asap7.sdc  constraints_sky130hd.sdc  io.tcl
picorv32_firmware/: Makefile
picorv32_firmware/firmware/: firmware.elf  firmware.hex  multest.c  start.S
riscv-target/serv/: compliance_io.h  compliance_test.h  model_test.h
riscv-target/serv/device/rv32i/: Makefile.include
rtl/: ServCore.v  camd_ram.v  complete_bridge.v  ice40_pll.v  riscv_timer.v  ser_add.v  ser_eq.v  ser_lt.v  ser_shift.v  serv_aligner.v  serv_alu.v  serv_bufreg.v  serv_bufreg2.v  serv_bufreg_gen.v  serv_clock_gen.v  serv_compdec.v  serv_csr.v  serv_ctrl.v  serv_debug.v  serv_decode.v  serv_immdec.v  serv_mem_decode.v  serv_mem_if.v  serv_mpram.v  serv_params.vh  serv_post_reg_decode.v  serv_pre_reg_decode.v  serv_regfile.v  serv_rf_2bit.v  serv_rf_if.v  serv_rf_ram.v  serv_rf_ram_if.v  serv_rf_top.v  serv_shift.v  serv_sleep.v  serv_state.v  serv_synth_wrapper.v  serv_top.v  serv_trace.v  servile_rf_mem_if.v  (+4 more)
rtl/core/: serv_alu.v  serv_bufreg.v  serv_bufreg2.v  serv_csr.v  serv_ctrl.v  serv_decode.v  serv_immdec.v  serv_mem_if.v  serv_rf_if.v  serv_rf_ram.v  serv_rf_ram_if.v  serv_rf_top.v  serv_state.v  serv_top.v
rtl/ip/: clock_gen.v  debug_dm.v  debug_dtm.v  flash_controller.v  gpio.v  spi_master.v  timer.v
rtl/system/: servant.v  servant_arbiter.v  servant_mux.v  servant_ram.v
rtl/xdc/: Arty-A7-35.xdc  VC707_gpio.xdc
servant/: ecp5_evn_pll.v  ecppll.v  ice40_pll.v  servant.v  servant_ac701.v  servant_arbiter.v  servant_ax309.v  servant_ax309_clock_gen.v  servant_catzip.v  servant_clock_gen.v  servant_cmod_a7.v  servant_cmod_a7_clock_gen.v  servant_ecp5.v  servant_ecp5_clock_gen.v  servant_ecp5_evn.v  servant_ecp5_evn_clock_gen.v  servant_gmm7550.v  servant_gpio.v  servant_ice40_cm36.v  servant_lx9.v  servant_lx9_clock_gen.v  servant_md_kolibri.v  servant_mux.v  servant_nexys_4.v  servant_nexys_4_clock_gen.v  servant_nexys_a7.v  servant_nexys_a7_clock_gen.v  servant_orangecrab.v  servant_pf.v  servant_pf_clock_gen.v  servant_qf.v  servant_ram.v  servant_ram_quartus.sv  servant_sleep_dummy.v  servant_tang_nano_20k.v  servant_te0802.v  servant_te0802_clock_gen.v  servant_timer.v  servant_upduino2.v  servant_xyloni.v  (+21 more)
servile/: servile.v  servile_arbiter.v  servile_mux.v
serving/: serving.v  serving_arbiter.v  serving_mux.v  serving_ram.v
sw/: Makefile  blinky.S  blinky.elf  blinky.hex  decodegen.py  external_interrupt.S  external_interrupt.hex  external_interrupt_wfi.S  external_interrupt_wfi.hex  hello_uart.S  hello_uart.hex  hello_uart_rv32ec.elf  hello_uart_rv32ec.hex  link.ld  makehex.py  timer_interrupt.S  timer_interrupt.hex  timer_interrupt_wfi.hex  timer_interrupt_wfi_recurring.S  trap_test_rv32e.S  trap_test_rv32e.hex  trap_test_rv32ec.hex  zephyr_hello.hex  zephyr_hello_mt.hex  zephyr_phil.hex  zephyr_sync.hex
tlv/: .gitignore  serv_bufreg.tlv  serv_mem_if.tlv  tracker.md  tracker_mem_if.md
tlv/env/: Dockerfile  Dockerfile.project  claude-config.json  docker-compose.yml  install_verilator
tlv/project_instructions/: project_setup_instructions.md  project_specific_instructions.md
tlv/regress/: fev.sh  fev_mem_if.sh  regress.sh  regress_mem_if.sh
tlv/regress/work/: fusesoc.conf
tlv/verilog/: serv_bufreg.v  serv_bufreg_gen.v  serv_mem_if.v
verif/: .gitignore  Readme.md  config.ini  config_rv32e.ini  makehex.py
verif/plugin-sail_cSim/: riscof_sail_cSim.py
verif/plugin-sail_cSim/env/: model_test.h
verif/plugin-serv/: riscof_serv.py  riscof_serv_rv32e.py  serv_isa_rv32e.yaml  serv_platform.yaml
verif/plugin-serv/env/: link.ld  model_test.h
verif/plugin-serv/env_rv32e/: model_test.h
zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/boards/olofk/service/: board.h  (+3 more)
zephyr/drivers/: CMakeLists.txt  Kconfig
zephyr/drivers/serial/: CMakeLists.txt  Kconfig  uart_bitbang.c
zephyr/drivers/timer/: CMakeLists.txt  Kconfig  serv_timer.c
zephyr/dts/riscv/: serv.dtsi
(+19 files in other folders)
