"""Bazel depedencies"""

module(
    name = "serv",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "1.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.12",
)

bazel_dep(name = "bazel-orfs")
git_override(
    module_name = "bazel-orfs",
    commit = "e153c70cebe9416db4e2de33d0bcee2749d0e539",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
)

orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")
orfs.default(
    # To update, find latest at https://hub.docker.com/r/openroad/orfs/tags
    image = "docker.io/openroad/orfs:v3.0-2601-g8f68e19a",
    sha256 = "90f10e4d287e1223647ac75a456efdcb61d8ca8b255b4946ff0d2e537806b32b",
)
use_repo(orfs, "com_github_nixos_patchelf_download")
use_repo(orfs, "docker_orfs")
