"""Bazel depedencies"""

module(
    name = "serv",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "1.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.12",
)

bazel_dep(name = "bazel-orfs")
git_override(
    module_name = "bazel-orfs",
    commit = "a3a8e0e889f9bb8f16030334530a648d2b902905",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
)

orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")
orfs.default(
    # To update, find latest at https://hub.docker.com/r/openroad/orfs/tags
    image = "docker.io/openroad/orfs:v3.0-2605-g110d2d7b",
    sha256 = "3f388f7f5889518da96bb20c90730c268de7561e5f16c0f43d2c987373c81522",
)
use_repo(orfs, "com_github_nixos_patchelf_download")
use_repo(orfs, "docker_orfs")
